# repo_diprima

./: LICENSE  Observatory Control.pptx  README.md
Dottorato/Algoritm_streak_detection/CPP/algoritm_streak_detection_cpp/: .gitignore  CMakeLists.txt  CMakeLists.txt~  astrometricReduction.sh  config.h.cmake  launcherWIN.bat  prova.bat
Dottorato/Algoritm_streak_detection/CPP/algoritm_streak_detection_cpp/data/: deb_260.fit  hamr_204.fit
Dottorato/Algoritm_streak_detection/CPP/algoritm_streak_detection_cpp/inc/: .gitignore  algo.h  algo_selection_GPU.h  file_selection.h  function.h  function_GPU.cuh  function_GPU.h  function_os.h  macros.h  main_2.h  main_sigmaClipSimpleBig_GPU.cuh
Dottorato/Algoritm_streak_detection/CPP/algoritm_streak_detection_cpp/src/: .gitignore  algo_selection.cpp  algo_selection.h  algo_selection_GPU.cpp  astrometricReduction.bat  astrometricReduction.sh  cookbook  cookbook.cxx  externalClass.cu  externalClass.cuh  file_selection.cpp  function.cpp  function.h  function.h~  function_GPU.cpp  function_GPU.cpp~  function_GPU.cu  function_GPU.h  function_GPU.h~  function_os_posix.cpp  function_os_posix.h  function_os_win.cpp  function_os_win.h  macros.h  main.cpp  main.cpp~  main_2.cpp  main_GPU.cpp  main_GPU.cpp~  main_GPU.h  main_GPU.h~  main_GPU_cuda.cu  main_GPU_cuda.cuh  main_algo.cpp  main_algo.h  main_fits.cpp  main_fits.h  main_median.cu  main_median.cuh  main_sigmaClip.cpp  (+10 more)
Dottorato/Algoritm_streak_detection/MATLAB/: .gitignore  fast_detection.m  fftZeroPaddingInterpolation.m  provaStretch.m  prova_fits.m  prova_morfologia.m  prova_radon_transform.m  prova_svd.m  readBinImage.m  streaks_points_detection.m  streaks_points_detection2.m  streaks_points_detection3.m  streaks_points_detection_big.m  streaks_points_detection_binary.m  streaks_points_detection_simple.m
Dottorato/Algoritm_streak_detection/MATLAB/src/: absoluteErrorAnalysis.m  binarization.m  binarization_hold.m  computationalTime.m  connectedComponentsPoints.m  connectedComponentsStreaks.m  convolution.m  coordDifferenceMaxImAstrometry.m  coordinateConvWcs.m  falsePositive.m  falsePositiveDetection.m  gaussianFilter.m  histogramEqualization.m  histogramStretching.m  houghTransform.m  imgSubtraction.m  lightCurve.m  meanExecutionTime.m  medianFilters.m  morphologyDilatation.m  morphologyOpen.m  provaHist.m  radecDeg2hgMS.m  readBinTable.m  readBinTableMultiFile.m  removeSaltPepper.m  roiExtraction.m  singleOperationTime.m  testCoord.m  writeResult.m
